[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/ui/background/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme/airbroomball_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/shop/Shop.gd" type="Script" id=3]
[ext_resource path="res://src/FadeEffect.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/actors/AnimatedBody.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/ui/locker/Locker.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/font/DSEG7ClassicMini-Bold.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 78
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="FadeEffect" parent="." instance=ExtResource( 4 )]
node_path = NodePath("../Objects")
node_path2 = NodePath("../Content")

[node name="Objects" type="Node2D" parent="."]

[node name="AnimatedBody" parent="Objects" instance=ExtResource( 6 )]
position = Vector2( 332, 154 )
rotation = -3.14159
shoulder_color = Color( 1, 1, 1, 1 )
arm_color = Color( 1, 1, 1, 1 )
upper_arm_color = Color( 1, 1, 1, 1 )

[node name="CurrentItem" type="Sprite" parent="Objects"]
position = Vector2( 352, 644 )
scale = Vector2( 4, 4 )

[node name="Ball" type="Sprite" parent="Objects"]
position = Vector2( 450, 269 )
rotation = -3.14159
scale = Vector2( 0.6, 0.6 )

[node name="Locker" parent="Objects" instance=ExtResource( 7 )]
visible = false
position = Vector2( 351, 644 )

[node name="Content" type="VBoxContainer" parent="."]
anchor_left = 0.042
anchor_top = 0.238281
anchor_right = 0.958
anchor_bottom = 0.915625
margin_left = -0.240002
margin_right = 0.239929
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Type" type="HBoxContainer" parent="Content"]
margin_right = 659.0
margin_bottom = 72.0
alignment = 1

[node name="PrevType" type="Button" parent="Content/Type"]
margin_right = 60.0
margin_bottom = 72.0
text = " < "

[node name="VSeparator2" type="VSeparator" parent="Content/Type"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 64.0
margin_right = 262.0
margin_bottom = 72.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Content/Type"]
margin_left = 266.0
margin_top = 4.0
margin_right = 392.0
margin_bottom = 68.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BALL"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VSeparator" type="VSeparator" parent="Content/Type"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 396.0
margin_right = 595.0
margin_bottom = 72.0
size_flags_horizontal = 3

[node name="NextType" type="Button" parent="Content/Type"]
margin_left = 599.0
margin_right = 659.0
margin_bottom = 72.0
text = " > "

[node name="HSeparator2" type="HSeparator" parent="Content"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 122.0
margin_right = 659.0
margin_bottom = 535.0
rect_min_size = Vector2( 0, 200 )
size_flags_vertical = 3

[node name="ItemButtons" type="HBoxContainer" parent="Content"]
margin_top = 585.0
margin_right = 659.0
margin_bottom = 663.0

[node name="PrevItem" type="Button" parent="Content/ItemButtons"]
margin_right = 60.0
margin_bottom = 78.0
text = " < "

[node name="Price" type="Label" parent="Content/ItemButtons"]
margin_left = 64.0
margin_right = 595.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NextItem" type="Button" parent="Content/ItemButtons"]
margin_left = 599.0
margin_right = 659.0
margin_bottom = 78.0
text = " > "

[node name="VBoxContainer" type="VBoxContainer" parent="Content"]
margin_top = 713.0
margin_right = 659.0
margin_bottom = 867.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Buy" type="Button" parent="Content/VBoxContainer"]
margin_right = 659.0
margin_bottom = 72.0
rect_min_size = Vector2( 420, 0 )
theme = ExtResource( 2 )
text = "BUY"

[node name="GoBack" type="Button" parent="Content/VBoxContainer"]
margin_top = 82.0
margin_right = 659.0
margin_bottom = 154.0
theme = ExtResource( 2 )
text = "GO_BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Content/Type/PrevType" to="." method="_on_PrevType_pressed"]
[connection signal="pressed" from="Content/Type/NextType" to="." method="_on_NextType_pressed"]
[connection signal="pressed" from="Content/ItemButtons/PrevItem" to="." method="_on_PrevItem_pressed"]
[connection signal="pressed" from="Content/ItemButtons/NextItem" to="." method="_on_NextItem_pressed"]
[connection signal="pressed" from="Content/VBoxContainer/Buy" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="Content/VBoxContainer/GoBack" to="." method="_on_GoBack_pressed"]
